Fix dark mode for Dozito + Spanish translation

--- a/src/css/games/dozito.less
+++ b/src/css/games/dozito.less
@@ -12,6 +12,10 @@ html[data-theme=dark] {
 		filter: invert(1) hue-rotate(180deg);
 	}
 
+	.dzt_clickable {
+		outline-color: var(--light-80);
+	}
+
 	.dzt-number-toggle-button {
 		background: var(--dark-20);
 	}
